[package]
name = "bhv-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["macros"]

[features]
default = ["macros"]
macros = ["bhv-async-macros"]

[dependencies]
bhv-async-macros = { path = "macros", optional = true }

[dev-dependencies]
tokio = { version = "1.34", features = ["full"]}

[[example]]
name = "demo"
