[package]
name = "bhv-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["macros", "egui-graph-bhv"]

[features]
default = ["macros", "petgraph"]
macros = ["bhv-async-macros"]
petgraph = ["petgraph"]

[dependencies]
bhv-async-macros = { path = "macros", optional = true }
petgraph = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1.34", features = ["full"]}

[[example]]
name = "demo"
